# flyboard_algorithm

./: .gitignore  Bezier.cc  Bezier.h  CMakeLists.txt  Vec2.h  main.cc  test.cc
